[project]
name = "fastapi-with-mcp"
version = "0.1.0"
description = "A FastAPI application integrated with Model Context Protocol (MCP) for mathematical operations and tool registration examples"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.14",
    "pydantic>=2.11.7",
    "pandas>=2.3.0",
    "mcp>=1.10.1",
    "fastmcp>=2.9.1",
]
